2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Improved use of hl as inter-i-code temporary.

2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #2795942.

2009-05-22 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genGenericShift): do not overwrite the shift count
	  for `val = 1 << val', fixes bug #2795131

2009-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (printIvalBitFields): cleaned up
	* src/pic16/glue.c (pic16_printIvalBitFields): same fix for bug 2791782

2009-05-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_iscntrl.c,
	* device/lib/_isdigit.c,
	* device/lib/_isgraph.c,
	* device/lib/_islower.c,
	* device/lib/_isprint.c,
	* device/lib/_ispunct.c,
	* device/lib/_isspace.c,
	* device/lib/_isupper.c,
	* device/lib/_isxdigit.c,
	* device/lib/_ltoa.c,
	* device/lib/pic16/libc/ctype/iscntrl.c,
	* device/lib/pic16/libc/ctype/isdigit.c,
	* device/lib/pic16/libc/ctype/isgraph.c,
	* device/lib/pic16/libc/ctype/islower.c,
	* device/lib/pic16/libc/ctype/isprint.c,
	* device/lib/pic16/libc/ctype/ispunct.c,
	* device/lib/pic16/libc/ctype/isspace.c,
	* device/lib/pic16/libc/ctype/isupper.c,
	* device/lib/pic16/libc/ctype/isxdigit.c,
	* device/lib/pic16/libc/stdlib/ltoa.c: fixed warnings after patch 2704189
	* src/SDCCglue.c (printIvalBitFields): fixed bug 2791782, a bug with
	  bitfields in next integer and an endianness bug for hc08
	* support/regression/tests/bitfields.c: added testcase for these bugs

2009-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/gen.c,
	  support/regression/test/bug-2646174.c:
	  Fixed bug #2646174.

2009-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fixed bug #1924707.

2009-05-09 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: implemented RFE #2786753: Remove Borland C support

2009-05-09 Maarten Brock <sourceforge.brock AT dse.nl>
